--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,8 +11,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Easier to remember splits
-bind = splitw -v -p 50 -c "#{pane_current_path}"
-bind '"' splitw -h -p 50 -c "#{pane_current_path}"
+# bind = splitw -v -p 50 -c "#{pane_current_path}"
+# bind '"' splitw -h -p 50 -c "#{pane_current_path}"
+bind = splitw -v 
+bind '"' splitw -h
 
 #bind-key -n C-h select-pane -L
 #bind-key -n C-j select-pane -D
